@@ -3,14 +3,16 @@ package org.example.purchaseservice.restControllers.balance;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Min;
+import jakarta.validation.constraints.Positive;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.example.purchaseservice.exceptions.PurchaseException;
 import org.example.purchaseservice.models.PageResponse;
-import org.example.purchaseservice.models.balance.Carrier;
 import org.example.purchaseservice.models.balance.Vehicle;
 import org.example.purchaseservice.models.balance.VehicleProduct;
 import org.example.purchaseservice.models.dto.balance.AddProductToVehicleDTO;
-import org.example.purchaseservice.models.dto.balance.CarrierDetailsDTO;
+import org.example.purchaseservice.models.dto.balance.UpdateVehicleCostRequest;
 import org.example.purchaseservice.models.dto.balance.VehicleCreateDTO;
 import org.example.purchaseservice.models.dto.balance.VehicleDetailsDTO;
 import org.example.purchaseservice.models.dto.balance.VehicleExpenseCreateDTO;
@@ -18,7 +20,10 @@ import org.example.purchaseservice.models.dto.balance.VehicleExpenseUpdateDTO;
 import org.example.purchaseservice.models.dto.balance.VehicleProductUpdateDTO;
 import org.example.purchaseservice.models.dto.balance.VehicleUpdateDTO;
 import org.example.purchaseservice.models.balance.VehicleExpense;
+import org.example.purchaseservice.mappers.VehicleMapper;
 import org.example.purchaseservice.services.balance.VehicleService;
+import org.example.purchaseservice.repositories.VehicleProductRepository;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -27,9 +32,12 @@ import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.validation.annotation.Validated;
+import org.springframework.beans.BeanUtils;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.io.IOException;
+import java.math.BigDecimal;
 import java.net.URI;
 import java.time.LocalDate;
 import java.util.Collections;
@@ -43,74 +51,40 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Validated
 public class VehicleController {
-    
     private final VehicleService vehicleService;
     private final ObjectMapper objectMapper;
     private final org.example.purchaseservice.services.balance.VehicleExportService vehicleExportService;
     private final org.example.purchaseservice.services.balance.VehicleExpenseService vehicleExpenseService;
+    private final VehicleMapper vehicleMapper;
+    private final VehicleProductRepository vehicleProductRepository;
     
     @PreAuthorize("hasAuthority('warehouse:create') or hasAuthority('declarant:create')")
     @PostMapping
-    public ResponseEntity<VehicleDetailsDTO> createVehicle(@Valid @RequestBody VehicleCreateDTO dto) {
+    public ResponseEntity<VehicleDetailsDTO> createVehicle(@RequestBody @Valid @NonNull VehicleCreateDTO dto) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         Long userId = (Long) authentication.getDetails();
-        
-        Vehicle vehicle = vehicleService.createVehicle(
-                dto.getShipmentDate(),
-                dto.getVehicleNumber(),
-                dto.getInvoiceUa(),
-                dto.getInvoiceEu(),
-                dto.getDescription(),
-                userId,
-                dto.getIsOurVehicle(),
-                dto.getSenderId(),
-                dto.getReceiverId(),
-                dto.getDestinationCountry(),
-                dto.getDestinationPlace(),
-                dto.getProduct(),
-                dto.getProductQuantity(),
-                dto.getDeclarationNumber(),
-                dto.getTerminal(),
-                dto.getDriverFullName(),
-                dto.getEur1(),
-                dto.getFito(),
-                dto.getCustomsDate(),
-                dto.getCustomsClearanceDate(),
-                dto.getUnloadingDate(),
-                dto.getInvoiceUaDate(),
-                dto.getInvoiceUaPricePerTon(),
-                dto.getInvoiceEuDate(),
-                dto.getInvoiceEuPricePerTon(),
-                dto.getReclamation(),
-                dto.getCarrierId()
-        );
-        
-        VehicleDetailsDTO detailsDTO = mapToDetailsDTO(vehicle);
-        
+        Vehicle vehicle = vehicleMapper.vehicleCreateDTOToVehicle(dto, userId);
+        Vehicle created = vehicleService.createVehicle(vehicle);
+        VehicleDetailsDTO detailsDTO = vehicleMapper.vehicleToVehicleDetailsDTO(created);
         URI location = ServletUriComponentsBuilder.fromCurrentRequest()
                 .path("/{id}")
-                .buildAndExpand(vehicle.getId())
+                .buildAndExpand(created.getId())
                 .toUri();
-        
         return ResponseEntity.created(location).body(detailsDTO);
     }
     
     @PreAuthorize("hasAuthority('warehouse:view') or hasAuthority('declarant:view')")
     @GetMapping("/{vehicleId}")
-    public ResponseEntity<VehicleDetailsDTO> getVehicleDetails(@PathVariable Long vehicleId) {
+    public ResponseEntity<VehicleDetailsDTO> getVehicleDetails(@PathVariable @Positive Long vehicleId) {
         Vehicle vehicle = vehicleService.getVehicle(vehicleId);
-        
-        if (vehicle == null) {
-            return ResponseEntity.notFound().build();
-        }
-        
-        VehicleDetailsDTO detailsDTO = mapToDetailsDTO(vehicle);
+        VehicleDetailsDTO detailsDTO = vehicleMapper.vehicleToVehicleDetailsDTO(vehicle);
         return ResponseEntity.ok(detailsDTO);
     }
     
+    @PreAuthorize("hasAuthority('warehouse:view') or hasAuthority('declarant:view')")
     @PostMapping("/ids")
-    public ResponseEntity<List<Map<Long, String>>> getVehiclesByIds(@RequestBody List<Long> ids) {
-        if (ids == null || ids.isEmpty()) {
+    public ResponseEntity<List<Map<Long, String>>> getVehiclesByIds(@RequestBody @NonNull List<Long> ids) {
+        if (ids.isEmpty()) {
             return ResponseEntity.ok(Collections.emptyList());
         }
         List<Vehicle> vehicles = vehicleService.getVehiclesByIds(ids);
@@ -124,119 +98,113 @@ public class VehicleController {
     @GetMapping("/export")
     public ResponseEntity<byte[]> exportVehiclesToExcel(
             @RequestParam(name = "q", required = false) String query,
-            @RequestParam(name = "filters", required = false) String filters) throws java.io.IOException {
+            @RequestParam(name = "filters", required = false) String filters) {
+        try {
+            Map<String, List<String>> filterParams;
+            try {
+                if (filters != null && !filters.isEmpty()) {
+                    filterParams = objectMapper.readValue(filters, objectMapper.getTypeFactory()
+                            .constructMapType(Map.class, String.class, List.class));
+                } else {
+                    filterParams = Collections.emptyMap();
+                }
+            } catch (Exception e) {
+                log.error("Failed to parse filters: {}", filters, e);
+                filterParams = Collections.emptyMap();
+            }
 
-        Map<String, List<String>> filterParams;
-        if (filters != null && !filters.isEmpty()) {
-            filterParams = objectMapper.readValue(filters, objectMapper.getTypeFactory()
-                    .constructMapType(Map.class, String.class, List.class));
-        } else {
-            filterParams = Collections.emptyMap();
+            byte[] excelData = vehicleExportService.exportToExcel(query, filterParams);
+
+            return ResponseEntity.ok()
+                    .header("Content-Type", "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet")
+                    .header("Content-Disposition", "attachment; filename=vehicles.xlsx")
+                    .body(excelData);
+        } catch (IOException e) {
+            log.error("Error exporting vehicles to Excel", e);
+            return ResponseEntity.internalServerError().build();
         }
-
-        byte[] excelData = vehicleExportService.exportToExcel(query, filterParams);
-
-        return ResponseEntity.ok()
-                .header("Content-Type", "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet")
-                .header("Content-Disposition", "attachment; filename=vehicles.xlsx")
-                .body(excelData);
     }
     
     @PreAuthorize("hasAuthority('warehouse:view') or hasAuthority('declarant:view')")
     @GetMapping("/by-date")
     public ResponseEntity<List<VehicleDetailsDTO>> getVehiclesByDate(
-            @RequestParam LocalDate date) {
-        
+            @RequestParam @NonNull LocalDate date) {
         List<Vehicle> vehicles = vehicleService.getVehiclesByDate(date);
-        
         List<VehicleDetailsDTO> dtos = vehicles.stream()
-                .map(this::mapToDetailsDTO)
-                .collect(Collectors.toList());
-        
+                .map(vehicleMapper::vehicleToVehicleDetailsDTO)
+                .toList();
         return ResponseEntity.ok(dtos);
     }
     
     @PreAuthorize("hasAuthority('warehouse:view')")
     @GetMapping("/by-date-range")
     public ResponseEntity<List<VehicleDetailsDTO>> getOurVehiclesByDateRange(
-            @RequestParam LocalDate fromDate,
-            @RequestParam LocalDate toDate) {
-        
+            @RequestParam @NonNull LocalDate fromDate,
+            @RequestParam @NonNull LocalDate toDate) {
         List<Vehicle> vehicles = vehicleService.getOurVehiclesByDateRange(fromDate, toDate);
-        
         List<VehicleDetailsDTO> dtos = vehicles.stream()
-                .map(this::mapToDetailsDTO)
-                .collect(Collectors.toList());
-        
+                .map(vehicleMapper::vehicleToVehicleDetailsDTO)
+                .toList();
         return ResponseEntity.ok(dtos);
     }
     
     @PreAuthorize("hasAuthority('declarant:view')")
     @GetMapping("/all/by-date-range")
     public ResponseEntity<List<VehicleDetailsDTO>> getAllVehiclesByDateRange(
-            @RequestParam LocalDate fromDate,
-            @RequestParam LocalDate toDate) {
-        
+            @RequestParam @NonNull LocalDate fromDate,
+            @RequestParam @NonNull LocalDate toDate) {
         List<Vehicle> vehicles = vehicleService.getAllVehiclesByDateRange(fromDate, toDate);
-        
         List<VehicleDetailsDTO> dtos = vehicles.stream()
-                .map(this::mapToDetailsDTO)
-                .collect(Collectors.toList());
-        
+                .map(vehicleMapper::vehicleToVehicleDetailsDTO)
+                .toList();
         return ResponseEntity.ok(dtos);
     }
     
     @PreAuthorize("hasAuthority('warehouse:edit') or hasAuthority('declarant:edit')")
-    @PutMapping("/{vehicleId}")
+    @PatchMapping("/{vehicleId}")
     public ResponseEntity<VehicleDetailsDTO> updateVehicle(
-            @PathVariable Long vehicleId,
-            @RequestBody VehicleUpdateDTO dto) {
+            @PathVariable @Positive Long vehicleId,
+            @RequestBody @Valid @NonNull VehicleUpdateDTO dto) {
         Vehicle updated = vehicleService.updateVehicle(vehicleId, dto);
-        return ResponseEntity.ok(mapToDetailsDTO(updated));
+        return ResponseEntity.ok(vehicleMapper.vehicleToVehicleDetailsDTO(updated));
     }
     
     @PreAuthorize("hasAuthority('warehouse:create') or hasAuthority('declarant:create')")
     @PostMapping("/{vehicleId}/products")
     public ResponseEntity<VehicleDetailsDTO> addProductToVehicle(
-            @PathVariable Long vehicleId,
-            @Valid @RequestBody AddProductToVehicleDTO dto) {
-        
+            @PathVariable @Positive Long vehicleId,
+            @RequestBody @Valid @NonNull AddProductToVehicleDTO dto) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         Long userId = (Long) authentication.getDetails();
-        
-        vehicleService.addProductToVehicle(
+        Vehicle vehicle = vehicleService.addProductToVehicle(
                 vehicleId,
                 dto.getWarehouseId(),
                 dto.getProductId(),
                 dto.getQuantity(),
                 userId
         );
-        
-        Vehicle vehicle = vehicleService.getVehicle(vehicleId);
-        VehicleDetailsDTO detailsDTO = mapToDetailsDTO(vehicle);
-        
+        VehicleDetailsDTO detailsDTO = vehicleMapper.vehicleToVehicleDetailsDTO(vehicle);
         return ResponseEntity.ok(detailsDTO);
     }
     
     @PreAuthorize("hasAuthority('warehouse:edit') or hasAuthority('declarant:edit')")
-    @PutMapping("/{vehicleId}/products/{vehicleProductId}")
+    @PatchMapping("/{vehicleId}/products/{vehicleProductId}")
     public ResponseEntity<VehicleDetailsDTO> updateVehicleProduct(
-            @PathVariable Long vehicleId,
-            @PathVariable Long vehicleProductId,
-            @Valid @RequestBody VehicleProductUpdateDTO dto) {
+            @PathVariable @Positive Long vehicleId,
+            @PathVariable @Positive Long vehicleProductId,
+            @RequestBody @Valid @NonNull VehicleProductUpdateDTO dto) {
         Vehicle updated = vehicleService.updateVehicleProduct(
                 vehicleId,
                 vehicleProductId,
                 dto.getQuantity(),
                 dto.getTotalCostEur()
         );
-
-        return ResponseEntity.ok(mapToDetailsDTO(updated));
+        return ResponseEntity.ok(vehicleMapper.vehicleToVehicleDetailsDTO(updated));
     }
     
     @PreAuthorize("hasAuthority('warehouse:delete') or hasAuthority('declarant:delete')")
     @DeleteMapping("/{vehicleId}")
-    public ResponseEntity<Void> deleteVehicle(@PathVariable Long vehicleId) {
+    public ResponseEntity<Void> deleteVehicle(@PathVariable @Positive Long vehicleId) {
         vehicleService.deleteVehicle(vehicleId);
         return ResponseEntity.noContent().build();
     }
@@ -244,15 +212,15 @@ public class VehicleController {
     @PreAuthorize("hasAuthority('declarant:create')")
     @PostMapping("/{vehicleId}/cost")
     public ResponseEntity<Void> updateVehicleCost(
-            @PathVariable Long vehicleId,
-            @RequestParam java.math.BigDecimal amountEur,
-            @RequestParam String operation) {
-        if ("add".equalsIgnoreCase(operation)) {
-            vehicleService.addWithdrawalCost(vehicleId, amountEur);
-        } else if ("subtract".equalsIgnoreCase(operation)) {
-            vehicleService.subtractWithdrawalCost(vehicleId, amountEur);
+            @PathVariable @Positive Long vehicleId,
+            @RequestBody @Valid @NonNull UpdateVehicleCostRequest request) {
+        if ("add".equalsIgnoreCase(request.getOperation())) {
+            vehicleService.addWithdrawalCost(vehicleId, request.getAmountEur());
+        } else if ("subtract".equalsIgnoreCase(request.getOperation())) {
+            vehicleService.subtractWithdrawalCost(vehicleId, request.getAmountEur());
         } else {
-            return ResponseEntity.badRequest().build();
+            throw new PurchaseException("INVALID_OPERATION",
+                    String.format("Invalid operation: %s. Must be 'add' or 'subtract'", request.getOperation()));
         }
         return ResponseEntity.ok().build();
     }
@@ -284,117 +252,79 @@ public class VehicleController {
             filterParams = Collections.emptyMap();
         }
 
-        PageResponse<VehicleDetailsDTO> result = vehicleService.searchVehicles(query, pageable, filterParams);
-        return ResponseEntity.ok(result);
-    }
-    
-    private VehicleDetailsDTO mapToDetailsDTO(Vehicle vehicle) {
-        List<VehicleProduct> products = vehicleService.getVehicleProducts(vehicle.getId());
+        Page<Vehicle> vehiclePage = vehicleService.searchVehicles(query, pageable, filterParams);
         
-        List<VehicleDetailsDTO.VehicleItemDTO> items = products.stream()
-                .map(p -> VehicleDetailsDTO.VehicleItemDTO.builder()
-                        .withdrawalId(p.getId())
-                        .productId(p.getProductId())
-                        .productName(null)
-                        .warehouseId(p.getWarehouseId())
-                        .quantity(p.getQuantity())
-                        .unitPriceEur(p.getUnitPriceEur())
-                        .totalCostEur(p.getTotalCostEur())
-                        .withdrawalDate(p.getAddedAt() != null ? p.getAddedAt().toLocalDate() : vehicle.getShipmentDate())
-                        .build())
-                .collect(Collectors.toList());
-        
-        // Calculate expenses total from VehicleExpense
-        java.math.BigDecimal expensesTotal = java.math.BigDecimal.ZERO;
-        List<VehicleExpense> expenses = vehicleExpenseService.getExpensesByVehicleId(vehicle.getId());
-        if (expenses != null && !expenses.isEmpty()) {
-            for (VehicleExpense expense : expenses) {
-                if (expense.getConvertedAmount() != null) {
-                    expensesTotal = expensesTotal.add(expense.getConvertedAmount());
-                }
-            }
+        List<Vehicle> vehicles = vehiclePage.getContent();
+        if (vehicles.isEmpty()) {
+            return ResponseEntity.ok(new PageResponse<>(
+                    vehiclePage.getNumber(),
+                    vehiclePage.getSize(),
+                    vehiclePage.getTotalElements(),
+                    vehiclePage.getTotalPages(),
+                    Collections.emptyList()
+            ));
         }
         
-        CarrierDetailsDTO carrierDTO = null;
-        if (vehicle.getCarrier() != null) {
-            Carrier carrier = vehicle.getCarrier();
-            carrierDTO = CarrierDetailsDTO.builder()
-                    .id(carrier.getId())
-                    .companyName(carrier.getCompanyName())
-                    .registrationAddress(carrier.getRegistrationAddress())
-                    .phoneNumber(carrier.getPhoneNumber())
-                    .code(carrier.getCode())
-                    .account(carrier.getAccount())
-                    .createdAt(carrier.getCreatedAt())
-                    .updatedAt(carrier.getUpdatedAt())
-                    .build();
-        }
+        List<Long> vehicleIds = vehicles.stream()
+                .map(Vehicle::getId)
+                .toList();
         
-        return VehicleDetailsDTO.builder()
-                .id(vehicle.getId())
-                .shipmentDate(vehicle.getShipmentDate())
-                .vehicleNumber(vehicle.getVehicleNumber())
-                .invoiceUa(vehicle.getInvoiceUa())
-                .invoiceEu(vehicle.getInvoiceEu())
-                .description(vehicle.getDescription())
-                .totalCostEur(vehicle.getTotalCostEur())
-                .userId(vehicle.getUserId())
-                .createdAt(vehicle.getCreatedAt())
-                .senderId(vehicle.getSender() != null ? vehicle.getSender().getId() : null)
-                .senderName(vehicle.getSender() != null ? vehicle.getSender().getName() : null)
-                .receiverId(vehicle.getReceiver() != null ? vehicle.getReceiver().getId() : null)
-                .receiverName(vehicle.getReceiver() != null ? vehicle.getReceiver().getName() : null)
-                .destinationCountry(vehicle.getDestinationCountry())
-                .destinationPlace(vehicle.getDestinationPlace())
-                .product(vehicle.getProduct())
-                .productQuantity(vehicle.getProductQuantity())
-                .declarationNumber(vehicle.getDeclarationNumber())
-                .terminal(vehicle.getTerminal())
-                .driverFullName(vehicle.getDriverFullName())
-                .isOurVehicle(vehicle.getIsOurVehicle())
-                .eur1(vehicle.getEur1())
-                .fito(vehicle.getFito())
-                .customsDate(vehicle.getCustomsDate())
-                .customsClearanceDate(vehicle.getCustomsClearanceDate())
-                .unloadingDate(vehicle.getUnloadingDate())
-                .invoiceUaDate(vehicle.getInvoiceUaDate())
-                .invoiceUaPricePerTon(vehicle.getInvoiceUaPricePerTon())
-                .invoiceUaTotalPrice(vehicle.getInvoiceUaTotalPrice())
-                .invoiceEuDate(vehicle.getInvoiceEuDate())
-                .invoiceEuPricePerTon(vehicle.getInvoiceEuPricePerTon())
-                .invoiceEuTotalPrice(vehicle.getInvoiceEuTotalPrice())
-                .reclamation(vehicle.getReclamation())
-                .totalExpenses(vehicleService.calculateTotalExpenses(vehicle, expensesTotal))
-                .totalIncome(vehicleService.calculateTotalIncome(vehicle))
-                .margin(vehicleService.calculateMargin(vehicle, expensesTotal))
-                .carrier(carrierDTO)
-                .items(items)
-                .build();
+        Map<Long, List<VehicleProduct>> vehicleProductsMap = vehicleProductRepository.findByVehicleIdIn(vehicleIds).stream()
+                .collect(java.util.stream.Collectors.groupingBy(VehicleProduct::getVehicleId));
+        
+        Map<Long, List<org.example.purchaseservice.models.balance.VehicleExpense>> expensesMap = 
+                vehicleExpenseService.getExpensesByVehicleIds(vehicleIds);
+        
+        Map<Long, BigDecimal> expensesTotalMap = expensesMap.entrySet().stream()
+                .collect(java.util.stream.Collectors.toMap(
+                        Map.Entry::getKey,
+                        entry -> entry.getValue().stream()
+                                .map(org.example.purchaseservice.models.balance.VehicleExpense::getConvertedAmount)
+                                .filter(java.util.Objects::nonNull)
+                                .reduce(java.math.BigDecimal.ZERO, java.math.BigDecimal::add)
+                ));
+        
+        List<VehicleDetailsDTO> dtos = vehicles.stream()
+                .map(vehicle -> {
+                    BigDecimal expensesTotal = expensesTotalMap.getOrDefault(vehicle.getId(), java.math.BigDecimal.ZERO);
+                    List<VehicleProduct> products = vehicleProductsMap.getOrDefault(vehicle.getId(), Collections.emptyList());
+                    return vehicleMapper.vehicleToVehicleDetailsDTO(vehicle, products, expensesTotal);
+                })
+                .toList();
+        
+        return ResponseEntity.ok(new PageResponse<>(
+                vehiclePage.getNumber(),
+                vehiclePage.getSize(),
+                vehiclePage.getTotalElements(),
+                vehiclePage.getTotalPages(),
+                dtos
+        ));
     }
-    
+
     @PreAuthorize("hasAuthority('declarant:create')")
     @PostMapping("/{vehicleId}/expenses")
     public ResponseEntity<VehicleExpense> createVehicleExpense(
-            @PathVariable Long vehicleId,
-            @Valid @RequestBody VehicleExpenseCreateDTO dto) {
-        dto.setVehicleId(vehicleId);
-        VehicleExpense expense = vehicleExpenseService.createVehicleExpense(dto);
+            @PathVariable @Positive Long vehicleId,
+            @RequestBody @Valid @NonNull VehicleExpenseCreateDTO dto) {
+        VehicleExpenseCreateDTO dtoWithVehicleId = new VehicleExpenseCreateDTO();
+        BeanUtils.copyProperties(dto, dtoWithVehicleId);
+        dtoWithVehicleId.setVehicleId(vehicleId);
+        VehicleExpense expense = vehicleExpenseService.createVehicleExpense(dtoWithVehicleId);
         return ResponseEntity.ok(expense);
     }
-    
+
     @PreAuthorize("hasAuthority('declarant:view')")
     @GetMapping("/{vehicleId}/expenses")
-    public ResponseEntity<List<VehicleExpense>> getVehicleExpenses(@PathVariable Long vehicleId) {
+    public ResponseEntity<List<VehicleExpense>> getVehicleExpenses(@PathVariable @Positive Long vehicleId) {
         List<VehicleExpense> expenses = vehicleExpenseService.getExpensesByVehicleId(vehicleId);
         return ResponseEntity.ok(expenses);
     }
-    
+
     @PreAuthorize("hasAuthority('declarant:create')")
-    @PutMapping("/{vehicleId}/expenses/{expenseId}")
+    @PatchMapping("/expenses/{expenseId}")
     public ResponseEntity<VehicleExpense> updateVehicleExpense(
-            @PathVariable Long vehicleId,
-            @PathVariable Long expenseId,
-            @Valid @RequestBody VehicleExpenseUpdateDTO dto) {
+            @PathVariable @Positive Long expenseId,
+            @RequestBody @Valid @NonNull VehicleExpenseUpdateDTO dto) {
         VehicleExpense expense = vehicleExpenseService.updateVehicleExpense(expenseId, dto);
         return ResponseEntity.ok(expense);
     }
