@@ -1,38 +1,44 @@
 package org.example.purchaseservice.restControllers.balance;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Positive;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.example.purchaseservice.models.balance.VehicleSender;
 import org.example.purchaseservice.models.dto.balance.VehicleSenderCreateDTO;
 import org.example.purchaseservice.models.dto.balance.VehicleSenderDTO;
+import org.example.purchaseservice.mappers.VehicleSenderMapper;
 import org.example.purchaseservice.services.balance.VehicleSenderService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
 @RequestMapping("/api/v1/vehicle-senders")
 @RequiredArgsConstructor
+@Validated
 public class VehicleSenderController {
     
     private final VehicleSenderService vehicleSenderService;
+    private final VehicleSenderMapper vehicleSenderMapper;
     
     @PreAuthorize("hasAuthority('settings_declarant:create')")
     @PostMapping
-    public ResponseEntity<VehicleSenderDTO> createVehicleSender(@Valid @RequestBody VehicleSenderCreateDTO dto) {
-        VehicleSender sender = vehicleSenderService.createVehicleSender(dto);
-        VehicleSenderDTO detailsDTO = mapToDTO(sender);
+    public ResponseEntity<VehicleSenderDTO> createVehicleSender(@RequestBody @Valid @NonNull VehicleSenderCreateDTO dto) {
+        VehicleSender sender = vehicleSenderMapper.vehicleSenderCreateDTOToVehicleSender(dto);
+        VehicleSender created = vehicleSenderService.createVehicleSender(sender);
+        VehicleSenderDTO detailsDTO = vehicleSenderMapper.vehicleSenderToVehicleSenderDTO(created);
         
         URI location = ServletUriComponentsBuilder.fromCurrentRequest()
                 .path("/{id}")
-                .buildAndExpand(sender.getId())
+                .buildAndExpand(created.getId())
                 .toUri();
         
         return ResponseEntity.created(location).body(detailsDTO);
@@ -40,9 +46,9 @@ public class VehicleSenderController {
 
     @PreAuthorize("hasAuthority('declarant:view')")
     @GetMapping("/{senderId}")
-    public ResponseEntity<VehicleSenderDTO> getVehicleSenderDetails(@PathVariable Long senderId) {
+    public ResponseEntity<VehicleSenderDTO> getVehicleSenderDetails(@PathVariable @Positive Long senderId) {
         VehicleSender sender = vehicleSenderService.getVehicleSender(senderId);
-        VehicleSenderDTO detailsDTO = mapToDTO(sender);
+        VehicleSenderDTO detailsDTO = vehicleSenderMapper.vehicleSenderToVehicleSenderDTO(sender);
         return ResponseEntity.ok(detailsDTO);
     }
 
@@ -51,34 +57,25 @@ public class VehicleSenderController {
     public ResponseEntity<List<VehicleSenderDTO>> getAllVehicleSenders() {
         List<VehicleSender> senders = vehicleSenderService.getAllVehicleSenders();
         List<VehicleSenderDTO> dtos = senders.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(vehicleSenderMapper::vehicleSenderToVehicleSenderDTO)
+                .toList();
         return ResponseEntity.ok(dtos);
     }
     
     @PreAuthorize("hasAuthority('settings_declarant:create')")
-    @PutMapping("/{senderId}")
+    @PatchMapping("/{senderId}")
     public ResponseEntity<VehicleSenderDTO> updateVehicleSender(
-            @PathVariable Long senderId,
-            @Valid @RequestBody VehicleSenderCreateDTO dto) {
-        VehicleSender updated = vehicleSenderService.updateVehicleSender(senderId, dto);
-        return ResponseEntity.ok(mapToDTO(updated));
+            @PathVariable @Positive Long senderId,
+            @RequestBody @Valid @NonNull VehicleSenderCreateDTO dto) {
+        VehicleSender updateData = vehicleSenderMapper.vehicleSenderCreateDTOToVehicleSender(dto);
+        VehicleSender updated = vehicleSenderService.updateVehicleSender(senderId, updateData);
+        return ResponseEntity.ok(vehicleSenderMapper.vehicleSenderToVehicleSenderDTO(updated));
     }
     
     @PreAuthorize("hasAuthority('settings_declarant:delete')")
     @DeleteMapping("/{senderId}")
-    public ResponseEntity<Void> deleteVehicleSender(@PathVariable Long senderId) {
+    public ResponseEntity<Void> deleteVehicleSender(@PathVariable @Positive Long senderId) {
         vehicleSenderService.deleteVehicleSender(senderId);
         return ResponseEntity.noContent().build();
     }
-    
-    private VehicleSenderDTO mapToDTO(VehicleSender sender) {
-        return VehicleSenderDTO.builder()
-                .id(sender.getId())
-                .name(sender.getName())
-                .createdAt(sender.getCreatedAt())
-                .updatedAt(sender.getUpdatedAt())
-                .build();
-    }
 }
-
