@@ -1,6 +1,8 @@
 package org.example.purchaseservice.restControllers.balance;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Positive;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.example.purchaseservice.models.balance.WarehouseBalanceAdjustment;
@@ -9,28 +11,31 @@ import org.example.purchaseservice.models.dto.balance.InitialWarehouseBalanceDTO
 import org.example.purchaseservice.models.dto.balance.WarehouseBalanceAdjustmentDTO;
 import org.example.purchaseservice.models.dto.balance.WarehouseBalanceUpdateRequest;
 import org.example.purchaseservice.models.dto.balance.WarehouseProductBalanceDTO;
-import org.example.purchaseservice.services.balance.WarehouseProductBalanceService;
+import org.example.purchaseservice.mappers.WarehouseBalanceMapper;
+import org.example.purchaseservice.services.balance.IWarehouseProductBalanceService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
 @RequestMapping("/api/v1/warehouse/balances")
 @RequiredArgsConstructor
+@Validated
 public class WarehouseBalanceController {
     
-    private final WarehouseProductBalanceService warehouseProductBalanceService;
+    private final IWarehouseProductBalanceService warehouseProductBalanceService;
+    private final WarehouseBalanceMapper warehouseBalanceMapper;
 
     @PreAuthorize("hasAuthority('warehouse:create')")
     @PostMapping("/initialize")
     public ResponseEntity<WarehouseProductBalanceDTO> setInitialBalance(
-            @Valid @RequestBody InitialWarehouseBalanceDTO dto) {
+            @RequestBody @Valid @NonNull InitialWarehouseBalanceDTO dto) {
         
         log.info("Setting initial balance: warehouse={}, product={}, qty={}, price={}", 
                 dto.getWarehouseId(), dto.getProductId(), dto.getInitialQuantity(), dto.getAveragePriceEur());
@@ -42,15 +47,15 @@ public class WarehouseBalanceController {
                 dto.getAveragePriceEur()
         );
         
-        WarehouseProductBalanceDTO responseDTO = mapToDTO(balance);
+        WarehouseProductBalanceDTO responseDTO = warehouseBalanceMapper.warehouseProductBalanceToWarehouseProductBalanceDTO(balance);
         return ResponseEntity.ok(responseDTO);
     }
 
     @PreAuthorize("hasAuthority('warehouse:view')")
     @GetMapping("/{warehouseId}/product/{productId}")
     public ResponseEntity<WarehouseProductBalanceDTO> getProductBalance(
-            @PathVariable Long warehouseId,
-            @PathVariable Long productId) {
+            @PathVariable @Positive Long warehouseId,
+            @PathVariable @Positive Long productId) {
         
         WarehouseProductBalance balance = warehouseProductBalanceService.getBalance(warehouseId, productId);
         
@@ -58,21 +63,18 @@ public class WarehouseBalanceController {
             return ResponseEntity.notFound().build();
         }
         
-        return ResponseEntity.ok(mapToDTO(balance));
+        return ResponseEntity.ok(warehouseBalanceMapper.warehouseProductBalanceToWarehouseProductBalanceDTO(balance));
     }
 
     @PreAuthorize("hasAuthority('warehouse:create')")
-    @PutMapping("/{warehouseId}/product/{productId}")
+    @PatchMapping("/{warehouseId}/product/{productId}")
     public ResponseEntity<WarehouseProductBalanceDTO> updateProductBalance(
-            @PathVariable Long warehouseId,
-            @PathVariable Long productId,
-            @RequestBody WarehouseBalanceUpdateRequest request) {
+            @PathVariable @Positive Long warehouseId,
+            @PathVariable @Positive Long productId,
+            @RequestBody @Valid @NonNull WarehouseBalanceUpdateRequest request) {
 
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        Long userId = null;
-        if (authentication != null && authentication.getDetails() instanceof Long) {
-            userId = (Long) authentication.getDetails();
-        }
+        Long userId = authentication != null ? (Long) authentication.getDetails() : null;
 
         WarehouseProductBalance updatedBalance = warehouseProductBalanceService.updateBalance(
                 warehouseId,
@@ -83,19 +85,19 @@ public class WarehouseBalanceController {
                 request.getDescription()
         );
 
-        return ResponseEntity.ok(mapToDTO(updatedBalance));
+        return ResponseEntity.ok(warehouseBalanceMapper.warehouseProductBalanceToWarehouseProductBalanceDTO(updatedBalance));
     }
 
     @PreAuthorize("hasAuthority('warehouse:view')")
     @GetMapping("/{warehouseId}")
     public ResponseEntity<List<WarehouseProductBalanceDTO>> getWarehouseBalances(
-            @PathVariable Long warehouseId) {
+            @PathVariable @Positive Long warehouseId) {
         
         List<WarehouseProductBalance> balances = warehouseProductBalanceService.getWarehouseBalances(warehouseId);
         
         List<WarehouseProductBalanceDTO> dtos = balances.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(warehouseBalanceMapper::warehouseProductBalanceToWarehouseProductBalanceDTO)
+                .toList();
         
         return ResponseEntity.ok(dtos);
     }
@@ -103,15 +105,15 @@ public class WarehouseBalanceController {
     @PreAuthorize("hasAuthority('warehouse:view')")
     @GetMapping("/{warehouseId}/product/{productId}/history")
     public ResponseEntity<List<WarehouseBalanceAdjustmentDTO>> getBalanceHistory(
-            @PathVariable Long warehouseId,
-            @PathVariable Long productId) {
+            @PathVariable @Positive Long warehouseId,
+            @PathVariable @Positive Long productId) {
 
         List<WarehouseBalanceAdjustment> adjustments = warehouseProductBalanceService
                 .getBalanceAdjustments(warehouseId, productId);
 
         List<WarehouseBalanceAdjustmentDTO> dtos = adjustments.stream()
-                .map(this::mapAdjustmentToDTO)
-                .collect(Collectors.toList());
+                .map(warehouseBalanceMapper::warehouseBalanceAdjustmentToWarehouseBalanceAdjustmentDTO)
+                .toList();
 
         return ResponseEntity.ok(dtos);
     }
@@ -122,40 +124,10 @@ public class WarehouseBalanceController {
         List<WarehouseProductBalance> balances = warehouseProductBalanceService.getAllActiveBalances();
         
         List<WarehouseProductBalanceDTO> dtos = balances.stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .map(warehouseBalanceMapper::warehouseProductBalanceToWarehouseProductBalanceDTO)
+                .toList();
         
         return ResponseEntity.ok(dtos);
-    }
-    
-    private WarehouseProductBalanceDTO mapToDTO(WarehouseProductBalance balance) {
-        return WarehouseProductBalanceDTO.builder()
-                .id(balance.getId())
-                .warehouseId(balance.getWarehouseId())
-                .productId(balance.getProductId())
-                .quantity(balance.getQuantity())
-                .averagePriceEur(balance.getAveragePriceEur())
-                .totalCostEur(balance.getTotalCostEur())
-                .updatedAt(balance.getUpdatedAt())
-                .build();
-    }
-
-    private WarehouseBalanceAdjustmentDTO mapAdjustmentToDTO(WarehouseBalanceAdjustment adjustment) {
-        return WarehouseBalanceAdjustmentDTO.builder()
-                .id(adjustment.getId())
-                .warehouseId(adjustment.getWarehouseId())
-                .productId(adjustment.getProductId())
-                .previousQuantity(adjustment.getPreviousQuantity())
-                .newQuantity(adjustment.getNewQuantity())
-                .previousTotalCostEur(adjustment.getPreviousTotalCostEur())
-                .newTotalCostEur(adjustment.getNewTotalCostEur())
-                .previousAveragePriceEur(adjustment.getPreviousAveragePriceEur())
-                .newAveragePriceEur(adjustment.getNewAveragePriceEur())
-                .adjustmentType(adjustment.getAdjustmentType())
-                .description(adjustment.getDescription())
-                .userId(adjustment.getUserId())
-                .createdAt(adjustment.getCreatedAt())
-                .build();
     }
 }
 
