@@ -1,63 +1,54 @@
 package org.example.purchaseservice.restControllers.exchange;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotBlank;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.example.purchaseservice.models.ExchangeRate;
 import org.example.purchaseservice.models.dto.ExchangeRateDTO;
 import org.example.purchaseservice.models.dto.ExchangeRateUpdateDTO;
+import org.example.purchaseservice.mappers.ExchangeRateMapper;
 import org.example.purchaseservice.services.ExchangeRateService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @RequestMapping("/api/v1/exchange-rates")
 @RequiredArgsConstructor
-@Slf4j
+@Validated
 public class ExchangeRateController {
     
     private final ExchangeRateService exchangeRateService;
+    private final ExchangeRateMapper exchangeRateMapper;
 
     @GetMapping
     public ResponseEntity<List<ExchangeRateDTO>> getAllExchangeRates() {
         List<ExchangeRate> rates = exchangeRateService.getAllExchangeRates();
         List<ExchangeRateDTO> dtos = rates.stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(exchangeRateMapper::exchangeRateToExchangeRateDTO)
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
     @GetMapping("/{currency}/rate")
-    public ResponseEntity<java.math.BigDecimal> getExchangeRateToEur(@PathVariable String currency) {
+    public ResponseEntity<java.math.BigDecimal> getExchangeRateToEur(@PathVariable @NotBlank String currency) {
         java.math.BigDecimal rate = exchangeRateService.getExchangeRateToEur(currency);
         return ResponseEntity.ok(rate);
     }
     
     @PreAuthorize("hasAuthority('settings_exchange:edit')")
-    @PutMapping("/{currency}")
+    @PatchMapping("/{currency}")
     public ResponseEntity<ExchangeRateDTO> updateExchangeRate(
-            @PathVariable String currency,
-            @Valid @RequestBody ExchangeRateUpdateDTO updateDTO) {
+            @PathVariable @NotBlank String currency,
+            @RequestBody @Valid @NonNull ExchangeRateUpdateDTO updateDTO) {
         
         ExchangeRate updated = exchangeRateService.updateExchangeRate(currency, updateDTO.getRate());
-        return ResponseEntity.ok(toDTO(updated));
-    }
-    
-    private ExchangeRateDTO toDTO(ExchangeRate rate) {
-        ExchangeRateDTO dto = new ExchangeRateDTO();
-        dto.setId(rate.getId());
-        dto.setFromCurrency(rate.getFromCurrency());
-        dto.setToCurrency(rate.getToCurrency());
-        dto.setRate(rate.getRate());
-        dto.setCreatedAt(rate.getCreatedAt());
-        dto.setUpdatedAt(rate.getUpdatedAt());
-        dto.setUpdatedByUserId(rate.getUpdatedByUserId());
-        return dto;
+        return ResponseEntity.ok(exchangeRateMapper.exchangeRateToExchangeRateDTO(updated));
     }
 }
-
-
